--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="index.html">WebStudio</a>
+      <a href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a
+      >
       <nav>
-        <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="/kontakt">Kontakt</a></li>
+        <ul class="nav-list">
+          <li class="nav-list-item"><a href="/agencja">Agencja</a></li>
+          <li class="nav-list-item"><a href="/portfolio.html">Portfolio</a></li>
+          <li class="nav-list-item"><a href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <div>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+      <div class="div-header">
+        <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+        <button type="button" class="main-button">
+          <span class="main-button-text">Zamów usługę</span>
+        </button>
       </div>
       <div>
-        <ul>
+        <ul class="lorem-ipsum-list">
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
@@ -85,7 +97,7 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="team">
         <h2>Nasz zespół</h2>
         <ul>
           <li>
@@ -97,8 +109,8 @@
                 height="260"
               />
               <figcaption>
-                John Doe<br />
-                Product Designer
+                <span class="name">John Doe</span><br />
+                <span class="position">Product Designer</span>
               </figcaption>
             </figure>
           </li>
@@ -111,8 +123,8 @@
                 height="260"
               />
               <figcaption>
-                John Doe<br />
-                Frontend Developer
+                <span class="name">John Doe</span><br />
+                <span class="position">Frontend Developer</span>
               </figcaption>
             </figure>
           </li>
@@ -125,8 +137,8 @@
                 height="260"
               />
               <figcaption>
-                John Doe<br />
-                Marketing
+                <span class="name">John Doe</span><br />
+                <span class="position">Marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -139,8 +151,8 @@
                 height="260"
               />
               <figcaption>
-                John Doe<br />
-                UI Designer
+                <span class="name">John Doe</span><br />
+                <span class="position">UI Designer</span>
               </figcaption>
             </figure>
           </li>
@@ -148,11 +160,11 @@
       </div>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <a href="./index.html"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+      <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
       <address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:++48111111111">+48 111 111 111</a>
+        <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
+        <a class="telephone-footer" href="tel:++48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
