--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <body>
     <header>
-      <a href="https:/index.html">WebStudio</a>
+      <a href="https:./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="/agencja">Agencja</a></li>
@@ -157,7 +162,7 @@
       </ul>
     </main>
     <footer>
-      <a href="https:/index.html">WebStudio</a>
+      <a href="https:./index.html">WebStudio</a>
       <address>m. Warszawa, Aleje Jerozolimskie 21</address>
       <address>
         <a href="mailto:info@example.com">info@example.com</a>
