--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a
+      <a href="./index.html"
+        ><span class="web">Web</span><span class="studio">Studio</span></a
       >
       <nav>
         <ul class="nav-list">
@@ -32,9 +33,7 @@
     <main>
       <div class="div-header">
         <h1>Efektywne rozwiązania dla waszego biznesu</h1>
-        <button type="button" class="main-button">
-          <span class="main-button-text">Zamów usługę</span>
-        </button>
+        <button type="button" class="main-button">Zamów usługę</button>
       </div>
       <div>
         <ul class="lorem-ipsum-list">
@@ -160,10 +159,15 @@
       </div>
     </main>
     <footer>
-      <a href="./index.html"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+      <a href="./index.html"
+        ><span class="web-footer">Web</span
+        ><span class="studio-footer">Studio</span></a
+      >
       <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
       <address>
-        <a class="mail-footer" href="mailto:info@example.com">info@example.com</a><br>
+        <a class="mail-footer" href="mailto:info@example.com"
+          >info@example.com</a
+        ><br />
         <a class="telephone-footer" href="tel:++48111111111">+48 111 111 111</a>
       </address>
     </footer>
