--- a/portfolio.html
+++ b/portfolio.html
@@ -9,28 +9,54 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="https:./index.html">WebStudio</a>
+      <a href="./index.html"
+        ><span class="web">Web</span><span class="studio">Studio</span></a
+      >
       <nav>
-        <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="/kontakt">Kontakt</a></li>
+        <ul class="nav-list">
+          <li class="nav-list-item"><a href="/agencja">Agencja</a></li>
+          <li class="nav-list-item"><a href="/portfolio.html">Portfolio</a></li>
+          <li class="nav-list-item"><a href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
       <ul>
-        <li><button type="button">Wszystkie</button></li>
-        <li><button type="button">Strony</button></li>
-        <li><button type="button">Aplikacje</button></li>
-        <li><button type="button">Dizajn</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li>
+          <button class="buttons" type="button">
+            <span class="buttons-text">Wszystkie</span>
+          </button>
+        </li>
+        <li>
+          <button class="buttons" type="button">
+            <span class="buttons-text">Strony</span>
+          </button>
+        </li>
+        <li>
+          <button class="buttons" type="button">
+            <span class="buttons-text">Aplikacje</span>
+          </button>
+        </li>
+        <li>
+          <button class="buttons" type="button">
+            <span class="buttons-text">Dizajn</span>
+          </button>
+        </li>
+        <li>
+          <button class="buttons" type="button">
+            <span class="buttons-text">Marketing</span>
+          </button>
+        </li>
       </ul>
       <ul>
         <li>
@@ -42,8 +68,8 @@
               height="294"
             />
             <figcaption>
-              Technocrack<br />
-              Strona internetowa
+              <span class="project-name">Technocrack</span><br />
+              <span class="project-type">Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
@@ -56,8 +82,9 @@
               height="294"
             />
             <figcaption>
-              Grafika New Orlean vs Golden Star<br />
-              Dizajn
+              <span class="project-name">Grafika New Orlean vs Golden Star</span
+              ><br />
+              <span class="project-type">Dizajn</span>
             </figcaption>
           </figure>
         </li>
@@ -70,8 +97,8 @@
               height="294"
             />
             <figcaption>
-              Restauracja Seafood<br />
-              Aplikacja
+              <span class="project-name">Restauracja Seafood</span><br />
+              <span class="project-type">Aplikacja</span>
             </figcaption>
           </figure>
         </li>
@@ -84,8 +111,8 @@
               height="294"
             />
             <figcaption>
-              Projekt Prime<br />
-              Marketing
+              <span class="project-name">Projekt Prime</span><br />
+              <span class="project-type">Marketing</span>
             </figcaption>
           </figure>
         </li>
@@ -98,8 +125,8 @@
               height="294"
             />
             <figcaption>
-              Projekt Boxes<br />
-              Aplikacje
+              <span class="project-name">Projekt Boxes</span><br />
+              <span class="project-type">Aplikacje</span>
             </figcaption>
           </figure>
         </li>
@@ -112,8 +139,8 @@
               height="294"
             />
             <figcaption>
-              Inspiration has no Borders<br />
-              Strona internetowa
+              <span class="project-name">Inspiration has no Borders</span><br />
+              <span class="project-type">Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
@@ -126,8 +153,8 @@
               height="294"
             />
             <figcaption>
-              Magazyn Limited Edition<br />
-              Dizajn
+              <span class="project-name">Magazyn Limited Edition</span><br />
+              <span class="project-type">Dizajn</span>
             </figcaption>
           </figure>
         </li>
@@ -140,8 +167,8 @@
               height="294"
             />
             <figcaption>
-              Projekt LAB<br />
-              Marketing
+              <span class="project-name">Projekt LAB</span><br />
+              <span class="project-type">Marketing</span>
             </figcaption>
           </figure>
         </li>
@@ -154,19 +181,24 @@
               height="294"
             />
             <figcaption>
-              Growing Business<br />
-              Aplikacja
+              <span class="project-name">Growing Business</span><br />
+              <span class="project-type">Aplikacja</span>
             </figcaption>
           </figure>
         </li>
       </ul>
     </main>
     <footer>
-      <a href="https:./index.html">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <a href="./index.html"
+        ><span class="web-footer">Web</span
+        ><span class="studio-footer">Studio</span></a
+      >
+      <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
       <address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:++48111111111">+48 111 111 111</a>
+        <a class="mail-footer" href="mailto:info@example.com"
+          >info@example.com</a
+        ><br />
+        <a class="telephone-footer" href="tel:++48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
