--- a/portfolio.html
+++ b/portfolio.html
@@ -38,24 +38,16 @@
           </button>
         </li>
         <li>
-          <button class="buttons" type="button">
-            <span class="buttons-text">Strony</span>
-          </button>
+          <button class="buttons" type="button">Strony</button>
         </li>
         <li>
-          <button class="buttons" type="button">
-            <span class="buttons-text">Aplikacje</span>
-          </button>
+          <button class="buttons" type="button">Aplikacje</button>
         </li>
         <li>
-          <button class="buttons" type="button">
-            <span class="buttons-text">Dizajn</span>
-          </button>
+          <button class="buttons" type="button">Dizajn</button>
         </li>
         <li>
-          <button class="buttons" type="button">
-            <span class="buttons-text">Marketing</span>
-          </button>
+          <button class="buttons" type="button">Marketing</button>
         </li>
       </ul>
       <ul>
