--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item"><a href="/agencja">Agencja</a></li>
-          <li class="nav-list-item"><a href="/portfolio.html">Portfolio</a></li>
+          <li class="nav-list-item"><a href="portfolio.html">Portfolio</a></li>
           <li class="nav-list-item"><a href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
