--- a/index.html
+++ b/index.html
@@ -6,29 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="./index.html"
-        ><span class="web">Web</span><span class="studio">Studio</span></a
-      >
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-list-item"><a href="/agencja">Agencja</a></li>
-          <li class="nav-list-item"><a href="portfolio.html">Portfolio</a></li>
-          <li class="nav-list-item"><a href="/kontakt">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
+      <div class="header">
+        <a class="logo" href="./index.html"
+          ><span class="web">Web</span
+          ><span class="studio-header">Studio</span></a
+        >
+        <nav>
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="/agencja">Agencja</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="/kontakt">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
+      </div>
     </header>
     <main>
       <div class="div-header">
@@ -38,28 +43,28 @@
       <div>
         <ul class="lorem-ipsum-list">
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h3 class="lorem-ipsum-list-item">LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h3 class="lorem-ipsum-list-item">LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h3 class="lorem-ipsum-list-item">LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h3 class="lorem-ipsum-list-item">LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -68,8 +73,8 @@
         </ul>
       </div>
       <div>
-        <h2>Czym się zajmujemy</h2>
-        <ul>
+        <h2 class="images-list-header">Czym się zajmujemy</h2>
+        <ul class="images-list">
           <li>
             <img
               src="images/close-up-image-programer-working-his-desk-office.jpeg"
@@ -97,8 +102,8 @@
         </ul>
       </div>
       <div class="team">
-        <h2>Nasz zespół</h2>
-        <ul>
+        <h2 class="images-list-header">Nasz zespół</h2>
+        <ul class="images-list">
           <li>
             <figure>
               <img
@@ -159,8 +164,8 @@
       </div>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="web-footer">Web</span
+      <a class="logo" href="./index.html"
+        ><span class="web">Web</span
         ><span class="studio-footer">Studio</span></a
       >
       <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
