--- a/portfolio.html
+++ b/portfolio.html
@@ -6,32 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="./index.html"
-        ><span class="web">Web</span><span class="studio">Studio</span></a
-      >
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-list-item"><a href="/agencja">Agencja</a></li>
-          <li class="nav-list-item"><a href="portfolio.html">Portfolio</a></li>
-          <li class="nav-list-item"><a href="/kontakt">Kontakt</a></li>
-        </ul>
-      </nav>
-      <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
+      <div class="header">
+        <a class="logo" href="./index.html"
+          ><span class="web">Web</span
+          ><span class="studio-header">Studio</span></a
+        >
+        <nav>
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="/agencja">Agencja</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="/kontakt">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="telephone" href="tel:+48111111111">+48 111 111 111</a>
+      </div>
     </header>
     <main>
-      <ul>
+      <ul class="buttons-list">
         <li>
           <button class="buttons" type="button">
             <span class="buttons-text">Wszystkie</span>
@@ -50,7 +55,7 @@
           <button class="buttons" type="button">Marketing</button>
         </li>
       </ul>
-      <ul>
+      <ul class="images-list">
         <li>
           <figure>
             <img
@@ -181,8 +186,8 @@
       </ul>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="web-footer">Web</span
+      <a class="logo" href="./index.html"
+        ><span class="web">Web</span
         ><span class="studio-footer">Studio</span></a
       >
       <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
