--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
       <div class="div-header">
-        <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+        <h1 class="h1">Efektywne rozwiązania dla waszego biznesu</h1>
         <button type="button" class="main-button">Zamów usługę</button>
       </div>
       <div>
@@ -163,7 +163,7 @@
         </ul>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
         ><span class="web">Web</span
         ><span class="studio-footer">Studio</span></a
