--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
         </li>
       </ul>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo" href="./index.html"
         ><span class="web">Web</span
         ><span class="studio-footer">Studio</span></a
