--- a/portfolio.html
+++ b/portfolio.html
@@ -57,28 +57,30 @@
       </ul>
       <ul class="images-list">
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/technocrack.jpeg"
               alt="laptop with an open website"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Technocrack</span><br />
               <span class="project-type">Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/new-orlean-vs-golden-star.jpeg"
               alt="two basketball players"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Grafika New Orlean vs Golden Star</span
               ><br />
               <span class="project-type">Dizajn</span>
@@ -86,98 +88,105 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/the-seafood-restaurant.jpeg"
               alt="seafood restaurant logo"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Restauracja Seafood</span><br />
               <span class="project-type">Aplikacja</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/project-prime.jpeg"
               alt="headphones"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Projekt Prime</span><br />
               <span class="project-type">Marketing</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/project-boxes.jpeg"
               alt="two boxes"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Projekt Boxes</span><br />
               <span class="project-type">Aplikacje</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/inspiration-has-no-borders.jpeg"
               alt="monitor with an open website"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Inspiration has no Borders</span><br />
               <span class="project-type">Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/magazine-limited-edition.jpeg"
               alt="magazine opened on the page with the inscription I'm limited edition"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Magazyn Limited Edition</span><br />
               <span class="project-type">Dizajn</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/label-tag.jpeg"
               alt="label"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Projekt LAB</span><br />
               <span class="project-type">Marketing</span>
             </figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="figure">
             <img
+              class="images-list-item"
               src="images/growing-business.jpeg"
               alt="laptop with an open website with the inscription growing business"
               width="370"
               height="294"
             />
-            <figcaption>
+            <figcaption class="figcaption">
               <span class="project-name">Growing Business</span><br />
               <span class="project-type">Aplikacja</span>
             </figcaption>
